--- a/client/src/components/homePage.css
+++ b/client/src/components/homePage.css
@@ -1,13 +1,11 @@
-.home {
+.homep {
     background-image: url('../icons/background.jpg');
     background-size: cover;
     justify-content: center;
-    background-repeat: no-repeat;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    background-repeat:repeat;
+    position:relative;
+   
+   
    
 }
 
@@ -23,7 +21,7 @@
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 15px;
-    overflow: hidden;
+    /* overflow: hidden; */
     transition: 0.2s;
     border-radius: 20px;
     cursor: pointer;
@@ -118,7 +116,7 @@
   font-size: 23px;
     color: rgb(0, 0, 0);
     font-style: groove;
-    position:relative;
+    /* position:relative; */
     font-size: 60px;
     padding-left: 8px;
     background: #413d40;  /* fallback for old browsers */
@@ -149,3 +147,33 @@
     display: flex;
     justify-content: center;
 }
+
+
+.selecth {
+    display: flex;
+    justify-content: center;
+    border-radius: 20px;
+    box-shadow: 4px 4px 5px 5px rgb(200, 200, 200);
+    padding-top: 5px;
+    width: 40%;
+    margin: 10px;
+    margin-left: 550px;
+}
+
+.filters {
+    color: #d0d0d0;
+    font-size: large;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.allrecipes {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 250px);
+    gap: 80px;
+    padding: 40px;
+    justify-content: center;
+    object-fit: cover;
+    
+}
+
